apply all the revision changes to the templeted manuscript

--- a/template_submissions_to_scientific_reports/bibliography.bib
+++ b/template_submissions_to_scientific_reports/bibliography.bib
@@ -190,7 +190,7 @@ author = "Hilbe, Christian and Traulsen, Arne and Sigmund, Karl",
   month        = apr,
   year         = 2016,
   doi          = {10.5281/zenodo.1476181},
-  url          = {http://dx.doi.org/10.5281/zenodo.1476181}
+  url          = {http://dx.doi.org/10.5281/zenodo.<DOI NUMBER>}
 }
 @article{Knight2016,
 archivePrefix = {arXiv},
@@ -424,14 +424,17 @@ author = "Matsui, Akihiko",
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @misc{glynatsi2019,
-  author       = {Glynatsi, Nikoleta E.},
-  title        = {{Raw data for: "Stability of defection,
-                   optimisation of strategies and the limits of
-                   memory in the Prisoner's Dilemma."}},
+  author       = {Nikoleta E. Glynatsi and
+                  Vincent A. Glynatsi},
+  title        = {{Raw data for: "A theory of mind. Best responses to 
+                   memory-one strategies. The limitations of
+                   extortion and restricted memory."}},
   month        = sep,
   year         = 2019,
-  doi          = {10.5281/zenodo.3402179},
-  howpublished = {\emph{Zenodo} \url{https://doi.org/10.5281/zenodo.3402179}}
+  publisher    = {Zenodo},
+  version      = {1.0.0},
+  doi          = {10.5281/zenodo.3533094},
+  howpublished          = {\url{https://doi.org/10.5281/zenodo.3533094}}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%PRE PRINT%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -453,17 +456,14 @@ author = "Matsui, Akihiko",
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOFTWARE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@software{nikoleta_glynatsi_2019,
-  author       = {Nikoleta E. Glynatsi and
-                  Vince Knight},
-  title        = {{Nikoleta-v3/Memory-size-in-the-prisoners-dilemma: 
-                   initial release}},
-  month        = nov,
-  year         = 2019,
+@misc{opt_mo2019,
+  author       = {Glynats, Nikoleta E Glynatsi and Knight, Vincent A},
+  title        = {Nikoleta-v3/Memory-size-in-the-prisoners-dilemma: initial release},
+  year         = {2019},
   publisher    = {Zenodo},
   version      = {0.0.1},
   doi          = {10.5281/zenodo.3533146},
-  url          = {https://doi.org/10.5281/zenodo.3533146}
+  howpublished = {\url{https://doi.org/10.5281/zenodo.3533146}}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%SIMILAR WORKS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @article{Hilbe2017,
@@ -504,6 +504,7 @@ author = "Matsui, Akihiko",
   year={2013},
   publisher={National Acad Sciences}
 }
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DERIVATIVE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @book{Abadir2005,
   title={Matrix algebra},
   author={Abadir, Karim M and Magnus, Jan R},
@@ -511,6 +512,7 @@ author = "Matsui, Akihiko",
   year={2005},
   publisher={Cambridge University Press}
 }
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @article{Hilbe2018,
   title={Partners and rivals in direct reciprocity},
   author={Hilbe, Christian and Chatterjee, Krishnendu and Nowak, Martin A},
@@ -521,9 +523,129 @@ author = "Matsui, Akihiko",
   year={2018},
   publisher={Nature Publishing Group}
 }
+
 @book{nowak2006evolutionary,
-  title={Evolutionary dynamics: exploring the equations of life},
-  author={Nowak, Martin A},
+   title={Evolutionary dynamics: exploring the equations of life},
+   author={Nowak, Martin A},
+   year={2006},
+   publisher={Harvard university press}
+ }
+%%%%THEORY OF MIND DEFITION%%%%%
+@article{Premack1978,
+  title={Does the chimpanzee have a theory of mind?},
+  author={Premack, David and Woodruff, Guy},
+  journal={Behavioral and brain sciences},
+  volume={1},
+  number={4},
+  pages={515--526},
+  year={1978},
+  publisher={Cambridge University Press}
+}
+@misc{Saxe2006,
+  title={The neuroscience of theory of mind},
+  author={Saxe, Rebecca and Baron-Cohen, Simon},
   year={2006},
-  publisher={Harvard university press}
+  publisher={Taylor \& Francis}
+}
+@article{Wellman2011,
+  title={Developing a theory of mind.},
+  author={Wellman, Henry M},
+  year={2011},
+  publisher={Wiley-Blackwell}
+}
+%%%%%%%MANUSCRIPTS PROPOSED BY REVIEWER%%%%%%%%%%%
+@article{Han2011,
+  title={Intention recognition promotes the emergence of cooperation},
+  author={Han The Anh and Moniz Pereira, Lu{\'\i}s and Santos, Francisco C},
+  journal={Adaptive Behavior},
+  volume={19},
+  number={4},
+  pages={264--279},
+  year={2011},
+  publisher={Sage Publications Sage UK: London, England}
+}
+@article{Han2012,
+  title={Corpus-based intention recognition in cooperation dilemmas},
+  author={Han, The Anh and Pereira, Luis Moniz and Santos, Francisco C},
+  journal={Artificial Life},
+  volume={18},
+  number={4},
+  pages={365--383},
+  year={2012},
+  publisher={MIT Press}
+}
+@article{Devaine2014,
+  title={Theory of mind: did evolution fool us?},
+  author={Devaine, Marie and Hollard, Guillaume and Daunizeau, Jean},
+  journal={PloS One},
+  volume={9},
+  number={2},
+  pages={e87619},
+  year={2014},
+  publisher={Public Library of Science}
+}
+@article{De2013,
+  title={How much does it help to know what she knows you know? An agent-based simulation study},
+  author={De Weerd, Harmen and Verbrugge, Rineke and Verheij, Bart},
+  journal={Artificial Intelligence},
+  volume={199},
+  pages={67--92},
+  year={2013},
+  publisher={Elsevier}
+}
+@article{Han2015,
+  title={Synergy between intention recognition and commitments in cooperation dilemmas},
+  author={Han, The Anh and Santos, Francisco C and Lenaerts, Tom and Pereira, Luis Moniz},
+  journal={Scientific reports},
+  volume={5},
+  pages={9312},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{Imhof2007,
+  title={Tit-for-tat or win-stay, lose-shift?},
+  author={Imhof, Lorens A and Fudenberg, Drew and Nowak, Martin A},
+  journal={Journal of theoretical biology},
+  volume={247},
+  number={3},
+  pages={574--580},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{Boyd1989,
+  title={Mistakes allow evolutionary stability in the repeated prisoner's dilemma game},
+  author={Boyd, Robert},
+  journal={Journal of theoretical Biology},
+  volume={136},
+  number={1},
+  pages={47--56},
+  year={1989},
+  publisher={Elsevier}
+}
+
+@article{Wu1995,
+  title={How to cope with noise in the iterated prisoner's dilemma},
+  author={Wu, Jianzhong and Axelrod, Robert},
+  journal={Journal of Conflict resolution},
+  volume={39},
+  number={1},
+  pages={183--189},
+  year={1995},
+  publisher={Sage Periodicals Press 2455 Teller Road, Thousand Oaks, CA 91320}
+}
+
+@misc{nikoleta_glynatsi_2020,
+  author       = {Nikoleta Glynatsi and
+                  Vincent A. Knight},
+  title        = {{Raw data Moran Experiments: "A theory of mind. 
+                   Best responses to memory-one strategies. The
+                   limitations of extortion and restricted memory"}},
+  month        = sep,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {1.0.0},
+  doi          = {10.5281/zenodo.4036427},
+  howpublished          = {\url{https://doi.org/10.5281/zenodo.4036427}}
 }
